# Raw-Redis-Rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_commands.sh
.github/workflows/: rust.yml
configs/: prometheus.yml
configs/data/01KHN3ENS2KX6X8JTNR4B4JV94/: index  meta.json
configs/data/01KHN3ENS2KX6X8JTNR4B4JV94/chunks/: 000001
configs/data/01KJHCFXEGPSD8GCK54Z9Q8PNV/: index  meta.json
configs/data/01KJHCFXEGPSD8GCK54Z9Q8PNV/chunks/: 000001
configs/data/chunks_head/: 000003  000004
configs/data/wal/: 00000007  00000008  00000009
configs/data/wal/checkpoint.00000006/: 00000000
src/: api.rs  config.rs  connection.rs  db.rs  errors.rs  frame.rs  lib.rs  main.rs  metrics.rs  parse.rs  types.rs
src/cmd/: del.rs  echo.rs  flushall.rs  get.rs  mod.rs  ping.rs  rpush.rs  set.rs  unlink.rs
