[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.16"
futures = "0.3.31"
combine = "4"
bytes = "1"
memchr = "2.7.6"
thiserror = "1.0"
tracing = "0.1"
prometheus = "0.14.0"
axum = "0.8.8"
async-recursion = "1.1.1"
tracing-subscriber = { version = "^0.3.22", features = ["env-filter"] }
async-trait = "0.1.89"
hashbrown = "0.16.1"
ahash = "0.8.12"
